@@ -1,3 +1,10 @@
+Wed Mar 30 09:46:01 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
+
+	* lib/open-uri.rb: Use `userinfo` for authenticated proxy.
+	  [fix GH-1148] Patch by @SokichiFujita
+	* test/open-uri/test_open-uri.rb: ditto.
+	  [fix GH-1309] Patch by @jdamick
+
 Wed Mar 30 01:56:06 2016  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* ext/nkf/nkf-utf8/nkf.c: Merge upstream 4f3edf80a0.
